libs/extractor/src/snapshots/extractor__tests__conditional_styles.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {Box} from '@devup-ui/core'\nconst Component = () => {\n    const isActive = true;\n    return <Box bg={isActive ? \"red\" : undefined} color={isActive ? undefined : \"blue\"} />;\n}\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: false, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "red",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "blue",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui-0.css\";\nconst Component = () => {\n\tconst isActive = true;\n\treturn ((__devupAssignment108, __devupAssignment145) => <div className={`${__devupAssignment108?.[0] ?? \"\"} ${__devupAssignment145?.[0] ?? \"\"}`} style={{\n\t\t...__devupAssignment108?.[1],\n\t\t...__devupAssignment145?.[1]\n\t}} />)(isActive ? ((__devupValue) => [\n\t\t\"FLtest_ptsx-OLbackground-vred\",\n\t\t{},\n\t\t__devupValue\n\t])(\"red\") : ((__devupValue) => [\n\t\t\"\",\n\t\t{},\n\t\t__devupValue\n\t])(undefined), isActive ? ((__devupValue) => [\n\t\t\"\",\n\t\t{},\n\t\t__devupValue\n\t])(undefined) : ((__devupValue) => [\n\t\t\"FLtest_ptsx-OLcolor-vblue\",\n\t\t{},\n\t\t__devupValue\n\t])(\"blue\"));\n};\n",
}
