libs/extractor/src/snapshots/extractor__tests__constant_objects_arrays_and_enums.snap
---
source: libs/extractor/src/lib.rs
expression: "output.map(ToBTreeSet::from).map_err(|error| error.to_string())"
---
Ok(
    ToBTreeSet {
        styles: {
            Static(
                ExtractStaticStyle {
                    property: "color",
                    value: "blue",
                    level: 0,
                    selector: None,
                    style_order: None,
                    layer: None,
                },
            ),
            Static(
                ExtractStaticStyle {
                    property: "color",
                    value: "blue",
                    level: 0,
                    selector: Some(
                        Global(
                            "body",
                            "/src/App.tsx",
                        ),
                    ),
                    style_order: Some(
                        0,
                    ),
                    layer: None,
                },
            ),
            Static(
                ExtractStaticStyle {
                    property: "color",
                    value: "green",
                    level: 0,
                    selector: Some(
                        At {
                            kind: Media,
                            query: "(min-width:1px)",
                            selector: None,
                            outer: [],
                            file: None,
                        },
                    ),
                    style_order: None,
                    layer: None,
                },
            ),
            Static(
                ExtractStaticStyle {
                    property: "color",
                    value: "navy",
                    level: 0,
                    selector: Some(
                        Selector(
                            "&:focus",
                        ),
                    ),
                    style_order: None,
                    layer: None,
                },
            ),
            Static(
                ExtractStaticStyle {
                    property: "color",
                    value: "red",
                    level: 0,
                    selector: None,
                    style_order: None,
                    layer: None,
                },
            ),
            Static(
                ExtractStaticStyle {
                    property: "content",
                    value: "n",
                    level: 0,
                    selector: None,
                    style_order: None,
                    layer: None,
                },
            ),
            Static(
                ExtractStaticStyle {
                    property: "flex-grow",
                    value: "9",
                    level: 0,
                    selector: None,
                    style_order: None,
                    layer: None,
                },
            ),
            Static(
                ExtractStaticStyle {
                    property: "font-family",
                    value: "a",
                    level: 0,
                    selector: None,
                    style_order: None,
                    layer: None,
                },
            ),
            Static(
                ExtractStaticStyle {
                    property: "height",
                    value: "120px",
                    level: 0,
                    selector: None,
                    style_order: None,
                    layer: None,
                },
            ),
            Static(
                ExtractStaticStyle {
                    property: "margin",
                    value: "12px",
                    level: 0,
                    selector: None,
                    style_order: None,
                    layer: None,
                },
            ),
            Static(
                ExtractStaticStyle {
                    property: "margin",
                    value: "32px",
                    level: 0,
                    selector: None,
                    style_order: None,
                    layer: None,
                },
            ),
            Static(
                ExtractStaticStyle {
                    property: "margin",
                    value: "4px",
                    level: 0,
                    selector: None,
                    style_order: None,
                    layer: None,
                },
            ),
            Static(
                ExtractStaticStyle {
                    property: "opacity",
                    value: ".5",
                    level: 0,
                    selector: Some(
                        Selector(
                            "&:hover",
                        ),
                    ),
                    style_order: None,
                    layer: None,
                },
            ),
            Static(
                ExtractStaticStyle {
                    property: "order",
                    value: "1",
                    level: 0,
                    selector: None,
                    style_order: None,
                    layer: None,
                },
            ),
            Static(
                ExtractStaticStyle {
                    property: "order",
                    value: "2",
                    level: 0,
                    selector: None,
                    style_order: None,
                    layer: None,
                },
            ),
            Static(
                ExtractStaticStyle {
                    property: "outline-color",
                    value: "teal",
                    level: 0,
                    selector: Some(
                        Selector(
                            "&:focus",
                        ),
                    ),
                    style_order: None,
                    layer: None,
                },
            ),
            Static(
                ExtractStaticStyle {
                    property: "padding",
                    value: "16px",
                    level: 0,
                    selector: None,
                    style_order: None,
                    layer: None,
                },
            ),
            Static(
                ExtractStaticStyle {
                    property: "padding",
                    value: "16px",
                    level: 0,
                    selector: Some(
                        Global(
                            "body",
                            "/src/App.tsx",
                        ),
                    ),
                    style_order: Some(
                        0,
                    ),
                    layer: None,
                },
            ),
            Static(
                ExtractStaticStyle {
                    property: "padding",
                    value: "32px",
                    level: 0,
                    selector: None,
                    style_order: None,
                    layer: None,
                },
            ),
            Static(
                ExtractStaticStyle {
                    property: "right",
                    value: "4px",
                    level: 0,
                    selector: None,
                    style_order: None,
                    layer: None,
                },
            ),
            Static(
                ExtractStaticStyle {
                    property: "width",
                    value: "40px",
                    level: 0,
                    selector: None,
                    style_order: None,
                    layer: None,
                },
            ),
            Static(
                ExtractStaticStyle {
                    property: "width",
                    value: "80px",
                    level: 2,
                    selector: None,
                    style_order: None,
                    layer: None,
                },
            ),
            Static(
                ExtractStaticStyle {
                    property: "z-index",
                    value: "1",
                    level: 0,
                    selector: None,
                    style_order: None,
                    layer: None,
                },
            ),
            Static(
                ExtractStaticStyle {
                    property: "z-index",
                    value: "2",
                    level: 0,
                    selector: None,
                    style_order: None,
                    layer: None,
                },
            ),
            Dynamic(
                ExtractDynamicStyle {
                    property: "bottom",
                    level: 0,
                    identifier: "getter.a",
                    selector: None,
                    style_order: None,
                },
            ),
            Keyframes(
                ExtractKeyframes {
                    keyframes: {
                        "from": [
                            ExtractStaticStyle {
                                property: "opacity",
                                value: ".5",
                                level: 0,
                                selector: None,
                                style_order: None,
                                layer: None,
                            },
                        ],
                    },
                },
            ),
        },
        code: "import \"@devup-ui/react/devup-ui-0.css\";\nimport * as Devup from \"@devup-ui/react\";\nimport * as stylex from \"@stylexjs/stylex\";\nimport { space, Size, Local, focus } from \"./tokens\";\nconst base = {\n\tp: 4,\n\tcolor: \"red\",\n\tcolor: \"blue\"\n};\nconst hover = { opacity: .5 };\nconst merged = {\n\t...base,\n\tm: 1\n};\nconst partial = {\n\t...unknown,\n\tm: 1\n};\nconst proto = {\n\t__proto__: null,\n\ta: 1\n};\nconst getter = { get a() {\n\treturn 1;\n} };\nexport const withGetter = <div className=\"a-a\" style={{ \"--a\": getter.a }} />;\nconst NONE = null;\nconst MEDIA = \"@media (min-width: 1px)\";\nconst keyed = { [MEDIA]: { color: \"green\" } };\nconst widths = [\n\t10,\n\tnull,\n\t20\n];\nconst more = [...widths, 30];\nconst bad = [...unknown];\nenum Level {\n\tLow = 1,\n\tHigh,\n\tName = \"n\",\n\tComputed = Math.max(1, 2),\n\tLast = 9\n}\ndeclare enum Ambient {\n\tX = 1\n}\nconst sx = { color: \"red\" };\nexport const a = \"a-b a-c\";\nexport const b = \"a-b a-d a-e a-f\";\nexport const c = \"a-b a-c a-g\";\nexport const d = ({ style, className, as: DevupAs = \"div\", forwardedAs, ...rest }) => <DevupAs {...(({ \"theme\": __devupOmit0, ...__devupDom }) => __devupDom)(rest)} as={forwardedAs} className={[\"a-b a-c\", className].filter(Boolean).join(\" \")} style={style} />;\nexport const e = ({ style, className, as: DevupAs = \"div\", forwardedAs, ...rest }) => <DevupAs {...(({ \"theme\": __devupOmit0, ...__devupDom }) => __devupDom)(rest)} as={forwardedAs} className={[\"a-b a-c a-e\", className].filter(Boolean).join(\" \")} style={style} />;\nexport const f = (Comp, handler) => <Comp onClick={handler} className=\"a-c a-e a-h a-i a-j a-k a-l a-m a-n a-o a-p a-q a-r\" {...base} />;\nexport const g = <div className=\"a-e\" />;\nexport const h = \"a-b a-c\";\nexport const i = ({ style, className, as: DevupAs = \"div\", forwardedAs, ...rest }) => <DevupAs {...(({ \"theme\": __devupOmit0, ...__devupDom }) => __devupDom)(rest)} as={forwardedAs} className={[\"a-b a-c\", className].filter(Boolean).join(\" \")} style={style} />;\nexport const j = (__devupProps) => (({ style, className, as: DevupAs = \"div\", forwardedAs, ...rest }) => <DevupAs {...(({ \"theme\": __devupOmit0, ...__devupDom }) => __devupDom)(rest)} as={forwardedAs} className={[\"a-b a-c\", className].filter(Boolean).join(\" \")} style={style} />)({\n\t...__devupProps,\n\t...{ role: \"button\" }\n});\nexport const k = { \"x\": \"a-s\" };\n;\nexport const l = \"a-t\";\nexport const m = \"a-u a-v a-y a-z\";\n",
    },
)
